# wiki-crawler

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  take_screenshots.py
agent/: README.md  tools.py  wiki_agent.py
docs/: 00-blackbox.md  01-architecture.md  02-data-flow.md  03-pipeline-pseudocode.md  04-api-guide.md  05-config-explained.md  README.md
jobs/: ingest_pipeline.py
rag-demo/: README.md
src/api/: main.py
src/controller/: agent_controller.py  article_controller.py  crawl_controller.py  index_controller.py  search_controller.py
src/core/: config.py  database.py  job_store.py  llm_client.py  vector_db.py
src/models/: __init__.py  article.py
src/repository/: __init__.py  article_repository.py
src/routers/: agent_router.py  article_router.py  crawl_router.py  index_router.py  search_router.py
src/schemas/: agent_schema.py  article_schema.py  crawl_schema.py  index_schema.py  search_schema.py
src/services/: agent_service.py  article_service.py  crawl_service.py  index_service.py  search_service.py
src/utils/: __init__.py  chunker.py  cleaner.py  crawler.py  embedder.py
